--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
-		"build": "opennextjs-cloudflare build",
+		"build": "next build && opennextjs-cloudflare build --skipBuild",
 		"start": "next start",
 		"lint": "next lint",
-		"deploy": "npm run build && wrangler deploy",
-		"preview": "npm run build && wrangler deploy --dry-run",
+		"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+		"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
 	},
 	"dependencies": {
