--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sceneyard",
+  "name": "success-partners",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,9 +10,7 @@
     "deploy": "npx wrangler deploy",
     "start": "next start",
     "lint": "next lint",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts",
-    "migrations-local": "npx wrangler d1 migrations apply sceneyard --local",
-    "migrations-prod": "npx wrangler d1 migrations apply sceneyard --remote"
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
   },
   "dependencies": {
     "@opennextjs/cloudflare": "^1.3.0",
